k8s/ff_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ff-ingress
  namespace: swcaptest
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "x-tenant,authorization,content-type"
spec:
  tls:
  - hosts:
    - test.semweb.co
    secretName: sw-co-test-letsencrypt-prod-cert
  rules:
  - host: test.semweb.co
    http:
      paths:
      - path: /feedFacade
        pathType: Prefix
        backend:
          serviceName: ff-service
          servicePort: 8080
